# polygot-code-sampler

./: .coverage 2  .coveragerc  .coveragerc 2  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  ACCESSIBILITY_BADGE.md  AI_PLUGINS_TRAINING_GUIDE.md  BENCHMARKS.md  BRANCHING_STRATEGY.md  CHANGELOG.md  CODE_SAMPLER_FX_SYMPHONY.md  CODE_SAMPLER_FX_SYMPHONY_BULLETPROOF.md  CODE_SAMPLER_FX_SYMPHONY_COMPLETE.md  CODE_SAMPLER_FX_SYMPHONY_SHOW_READY.md  CONTRIBUTING.md  COOL_PROJECTS.md  Caddyfile  Dockerfile  EMBED_SNIPPETS.md  FINAL_POLISH_REPORT.md  GITHUB_DISCUSSION.md  GITHUB_DISCUSSION_GUIDE.md  GIT_BRANCHING_WORKFLOW.md  IMPROVEMENTS.md  IMPROVEMENTS_APPLIED.md  LAUNCH_CHECKLIST.md  LAUNCH_POST.md  LICENSE  LICENSE 2  LOLCAT_FX_RACK_GUIDE.md  LOLCAT_PLUS_FINISHING_TOUCHES.md  LOLCAT_PLUS_INTEGRATION.md  LOLCAT_PLUS_LAST_MILE.md  LOLCAT_PLUS_STAGE_READY.md  MASTERED_PERFORMANCE_REPORT.md  MATH_VISUALS_INTEGRATION_GUIDE.md  Makefile  Makefile 2  (+121 more)
.github/: CODEOWNERS  CODEOWNERS 2  branch-protection.sh  dependabot.yml  labeler.yml  pull_request_template.md  push-proof-starter-template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: adopt-renderer-api.md  backend-feature-request.md  codegen-mismatch.md  perf-regression.md
.github/workflows/: auto-labeler.yml  ci-mirror-hooks.yml  ci.yml  conventional-commits.yml  demo-dashboard.yml  golden-stability.yml  julia-dev.yml  lfs-enforcement.yml  matrix-smoke.yml  nightly-bench.yml  performance.yml  pre-commit.yml  publish-dashboard.yml  publish.yml  release-guard.yml  release.yml  sbom.yml  workflow-drift-check.yml
bench/: canary_baseline.json  policy.schema.json  policy.yml  schema.json  vintage.yml
bench/results/: 2025-07-29.ndjson  2025-07-30.ndjson  2025-07-31.ndjson  2025-08-01.ndjson  2025-08-02.ndjson  2025-08-03.ndjson  2025-08-04.ndjson  2025-08-05.ndjson  2025-08-06.ndjson  2025-08-07.ndjson  2025-08-08.ndjson  2025-08-09.ndjson  2025-08-10.ndjson  2025-08-11.ndjson  2025-08-12.ndjson  2025-08-13.ndjson  2025-08-14.ndjson  2025-08-15.ndjson  2025-08-16.ndjson  2025-08-17.ndjson  2025-08-18.ndjson  2025-08-19.ndjson  2025-08-20.ndjson  2025-08-21.ndjson  2025-08-22.ndjson  2025-08-23.ndjson  2025-08-24.ndjson  2025-08-25.ndjson  2025-08-26.ndjson  2025-08-27.ndjson  2025-08-28.ndjson  2025-08-29.ndjson  2025-08-30.ndjson  2025-08-31.ndjson  2025-09-01.ndjson  2025-09-02.ndjson  2025-09-03.ndjson  2025-09-04.ndjson  2025-09-05.ndjson  2025-09-06.ndjson  (+21 more)
docs/: API.md  EXAMPLES.md  FAILURE_CASES.md  FOH_RUNBOOK.md  OPERATOR_POCKET_CARD.md  RENDERER_API.md  SLOs.md  WHY_ADAPTER.md  runbook.md  slack-setup 2.md  slack-setup.md
examples/data_analytics/: README.md
examples/game_logic/: README.md
examples/julia/: benchmark_parallel.jl  property_tests.jl  run_simple.jl  sanity_perf_check.jl  strategy_demo.py
examples/music_theory/: README.md
examples/security_logs/: README.md
grafana/: alert_rules_mastered.yml
grafana/dashboards/: code-live-dashboard.json  code-live-mastered.json  code-live-spectrum.json
pcs/: __init__ 2.py  __init__.py  __main__.py  __version__ 2.py  __version__.py  a432_api.py  audio_fx.py  cli 2.py  cli.py  core 2.py  core.py  pi_mode.py  renderer_api.py  texture_mode.py  vintage_profiles.py
pcs/renderers/: __init__.py  csharp.py  go.py  julia.py  rust.py  sql.py  ts.py
performance_data/: benchmark_history_00 2.json  benchmark_history_00.json  benchmark_history_01 2.json  benchmark_history_01.json  benchmark_history_02 2.json  benchmark_history_02.json  benchmark_history_03 2.json  benchmark_history_03.json  benchmark_history_04 2.json  benchmark_history_04.json  benchmark_history_05 3.json  benchmark_history_05.json  benchmark_history_06 2.json  benchmark_history_06.json  benchmark_history_07 2.json  benchmark_history_07.json  benchmark_history_08 2.json  benchmark_history_08.json  benchmark_history_09 2.json  benchmark_history_09.json  performance_dashboard 2.md  performance_dashboard.md
polyglot_code_sampler.egg-info/: PKG-INFO  PKG-INFO 2  SOURCES 2.txt  SOURCES.txt  entry_points 2.txt  requires 2.txt
profiles/: arena.json  club.json
public/: manifest.webmanifest  sw.js
repo/: README 4.md  README.md  ci 2.yml  ci.yml  release 2.yml  release.yml
scenes/: lolcat_morph.json  lolcat_show.json
scripts/: 30_sec_capture.sh  a11y_timing_fix.py  a432.py  ableton-template.als  ableton-template.md  aggregate_bench 2.py  aggregate_bench.py  ai_data_collector.py  bench_all 2.py  bench_all.py  bench_best_of_k.py  bench_csharp 2.cs  bench_csharp.cs  bench_go 2.go  bench_go.go  bench_julia 2.jl  bench_julia.jl  bench_multi_test 2.py  bench_multi_test 3.py  bench_multi_test.py  bench_rust 2.rs  bench_rust.rs  bench_ts 3.js  bench_ts.js  canary_bench.py  capture_opera.js  chaos_drill.sh  clair_de_lune_showflow.py  code_opera.py  conductor_score_cli.py  cosmic_dust_cli.py  counterpoint_guard.py  crazy_string_fx.py  creative_demo.py  crowd-nudge.js  crowd-server.js  demo_lolcat_fx.py  demo_physics_fx.py  deploy.sh  effect_rack_cli.py  (+86 more)
scripts/synth/: lfo.js  (+1 more)
server/: contracts.py  opera_state.py  routes.py
shows/: clair_de_lune.scene.json
site/: README.md  a432-egg.html  benchmarks 2.json  benchmarks.json  chromatic-light-desk.html  code-audio-simulator.html  code-daw.html  code-live-physics-fx-dropin.html  code-live-visual-effects.html  code-live-webgl-effects.html  code-live.html  code-lolcat-fx.html  code-mixer-prod.html  code-performance.html  dashboard.html  index 2.html  index.html  opera-conductor.html  test_benchmarks.json  tunezilla-opera-poster.html
string_fx/: conductor_score.py  cosmic_dust.py  effect_rack.py  lolcat_plus.py  pro_rack.py  rack_modules.py  rack_show.py  runtime.py  show_controller.py  stage_proof.py  touring_rig.py
tests/: conftest 2.py  conftest.py  diff_map_filter_reduce 2.jl  diff_map_filter_reduce.jl  pcs_runtime 3.jl  pcs_runtime.jl  test_golden 2.py  test_golden.py  test_lolcat_plus.py  test_mixer_core.py  test_one_ir_many_goldens 2.py  test_one_ir_many_goldens.py  test_opera_sanity.py  test_property_invariants.py  test_renderer_api.py
(+196 files in other folders)
